Make example apache config more specific (for basic auth only)

--- a/docs/examples/deployment/moin-http-basic-auth.conf
+++ b/docs/examples/deployment/moin-http-basic-auth.conf
@@ -1,6 +1,6 @@
 # vim: ts=4 filetype=apache
 
-## Sample vhost config file for Apache 2 and MoinMoin
+## Sample vhost config file for Apache 2 and MoinMoin with HTTP basic auth
 ## Add `Include /path/to/this/file` in your Apache httpd.conf activate
 ## this configuration, and remember to install mod_wsgi and start Apache
 ## with "-D WSGI"
@@ -22,27 +22,26 @@
         python-path=/path/to/moin/moin/virtualenv/python/interpreters/site-packages
     ## The wiki will be accessible from myservername:80/wiki/root/url/ now
     WSGIScriptAlias /wiki/root/url/ /path/to/moin/moin/install/moinmoin.wsgi
-    ## Uncomment the following line to let WSGI applications use HTTP
-    ## authentication methods
-    # WSGIPassAuthorization On
+    ## Let WSGI applications use HTTP authentication methods
+    WSGIPassAuthorization On
 
     <Directory /home/sam/Programming/MoinMoin/moin-2.0>
-        ## Uncomment the following line for HTTP basic auth
+        ## HTTP basic auth
         ## Works with MoinMoin's GivenAuth authentication backend
         ## See https://httpd.apache.org/docs/2.0/howto/auth.html for more
         ## information on Apache authentication
-        # AuthType Basic
+        AuthType Basic
         ## Authname is the message that the browser will display when asking
         ## for username and password
-        # AuthName "MoinMoin requires user credentials"
+        AuthName "MoinMoin requires user credentials"
         ## AuthUserFile contains usernames and passwords for wiki users
         ## and can be generated using the htpasswd utility included with
         ## Apache
-        # AuthUserFile /home/sam/Programming/MoinMoin/moin-2.0/passwords
+        AuthUserFile /path/to/moin/apache/passwords/file
         ## valid-user means that the supplied username must be in AuthUserFile
         ## and the supplied password must match the entry for the user in
         ## AuthUserFile
-        # Require valid-user
+        Require valid-user
         ## Name of the WSGI processes
         WSGIProcessGroup moinmoin-wsgi
         ## All WSGI applications in group %{GLOBAL} are run under the
