Simplify example apache config file, fix correctness

--- a/docs/examples/deployment/moin-http-basic-auth.conf
+++ b/docs/examples/deployment/moin-http-basic-auth.conf
@@ -2,34 +2,32 @@
 
 ## Sample vhost config file for Apache 2 and MoinMoin with HTTP basic auth
 
-## Add `Include /path/to/this/file` in your Apache httpd.conf activate
-## this configuration, and remember to install mod_wsgi and start Apache
-## with "-D WSGI"
+## Add `Include /path/to/this/file` in your Apache httpd.conf to activate
+## this configuration (or place this file in the location specified by your
+## distribution), and remember to install mod_wsgi and start Apache
+## with "-D WSGI" if mod_wsgi is not already enabled
 
 ## For more information on mod_wsgi configuration directives, see
 ## https://code.google.com/p/modwsgi/wiki/ConfigurationDirectives
 
 ## Listen to port 80 on all IPs
-## You will probably want to replace * with your server name
 <VirtualHost *:80>
     ## Replace with the name of your server (eg. localhost or my.domain.tld)
     ServerName myservername
 
     ## Note that python-path is required when deploying using virtualenv so
     ## that the interpreter can find the necessary Python packages installed
-    ## with MoinMoin. You will probably want to refer to the mod_wsgi reference
-    ## documentation for help with this configuration directive, as it includes
-    ## too many useful  parameters to list here.
-    WSGIDaemonProcess moinmoin-wsgi user=myuser group=mygroup \
-        python-path=/path/to/moin/moin/virtualenv/python/interpreters/site-packages
+    ## with MoinMoin
+    WSGIDaemonProcess moinmoin-wsgi user=myuser
+        python-path=/path/to/moin/moin/virtualenv/python/interpreter/site-packages
 
     ## The wiki will be accessible from myservername:80/wiki/root/url/ now
-    WSGIScriptAlias /wiki/root/url/ /path/to/moin/moin/install/moinmoin.wsgi
+    WSGIScriptAlias /wiki/root/url /path/to/moin/moin/install/moinmoin.wsgi
 
     ## Let WSGI applications use HTTP authentication methods
     WSGIPassAuthorization On
 
-    <Directory /home/sam/Programming/MoinMoin/moin-2.0>
+    <Directory /path/to/moin/moin/install>
         ## HTTP basic auth
         ## Works with MoinMoin's GivenAuth authentication backend
         ## See https://httpd.apache.org/docs/2.0/howto/auth.html for more
@@ -38,7 +36,7 @@
 
         ## Authname is the message that the browser will display when asking
         ## for username and password
-        AuthName "MoinMoin requires user credentials"
+        AuthName "Please log in"
 
         ## AuthUserFile contains usernames and passwords for wiki users
         ## and can be generated using the htpasswd utility included with
